--- a/src/html/index/big-header.html
+++ b/src/html/index/big-header.html
@@ -1,4 +1,4 @@
-<header class="big-header big-header_padding-bottom-36">
+<header class="big-header">
   <div class="big-header__logo">
     <img src="img/logo.svg" alt="Logo" />
   </div>
