--- a/src/html/index/first-slide.html
+++ b/src/html/index/first-slide.html
@@ -5,10 +5,31 @@
     way to get Crypto
   </h1>
   <div class="first-slide__actions">
-    <button class="first-slide__button">
-      Get Wallet
-    </button>
-    <a class="button">
+    <div class="first-slide__link first-slide__link_inline-block _popup-block-container">
+      <button class="first-slide__button _open-popup-block">
+        Get Wallet
+      </button>
+      <div class="popup-block get-wallet get-wallet_right-0 _popup-block">
+        <div class="popup-block__title">
+          Get wallet
+        </div>
+        <form action="" class="form">
+          <div class="form__item">
+            <input type="mail" placeholder="Email" class="form__input">
+          </div>
+          <div class="popup-block__button popup-block__button_margin-bottom">
+            <button class="action-button">Get wallet</button>
+          </div>
+          <div class="form__accept">
+            <label for="accept-1" class="form__label">
+              <input id="accept-1" type="checkbox" class="form__checkbox" />
+              I accept Terms&Conditions and Privacy Policy
+            </label>
+          </div>
+        </form>
+      </div>
+    </div>
+    <a href="exchange.html" class="button">
       Exchange
     </a>
   </div>
