--- a/src/html/contact/header.html
+++ b/src/html/contact/header.html
@@ -1,4 +1,4 @@
-<header class="big-header big-header_padding-bottom-36">
+<header class="big-header big-header_padding-bottom-36 big-header_padding">
   <div class="big-header__logo">
     <img src="img/logo.svg" alt="Logo" />
   </div>
@@ -38,7 +38,7 @@
       <a href="legal.html" class="nav__link">Legal</a>
     </div>
     <div class="nav__item">
-      <a href="contact.html" class="nav__link">Contact us</a>
+      <a href="contact.html" class="nav__link nav__link_active">Contact us</a>
     </div>
   </nav>
 </header>
