--- a/src/html/exchange/form.html
+++ b/src/html/exchange/form.html
@@ -36,9 +36,9 @@
       <button class="button button_margin-bottom-33 button_margin-right-45 button_font-size-34">
         Exchange
       </button>
-      <div class="exchange-form__accept">
-        <label for="checkbox" class="form__label">
-          <input id="checkbox" type="checkbox" class="form__checkbox" />
+      <div class="form__accept form__accept_margin-right">
+        <label for="accept" class="form__label">
+          <input id="accept" type="checkbox" class="form__checkbox" />
           I accept Terms&Conditions and Privacy Policy
         </label>
       </div>
