--- a/src/html/faq/header.html
+++ b/src/html/faq/header.html
@@ -1,4 +1,4 @@
-<header class="big-header big-header_padding-bottom-36">
+<header class="big-header big-header_padding-bottom-36 big-header_padding">
   <div class="big-header__logo">
     <img src="img/logo.svg" alt="Logo" />
   </div>
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="nav__item">
-      <a href="faq.html" class="nav__link">FAQ</a>
+      <a href="faq.html" class="nav__link nav__link_active">FAQ</a>
     </div>
     <div class="nav__item">
       <a href="legal.html" class="nav__link">Legal</a>
