--- a/src/html/contact/header.html
+++ b/src/html/contact/header.html
@@ -1,7 +1,7 @@
 <header class="big-header big-header_padding-bottom-36 big-header_padding">
-  <div class="big-header__logo">
+  <a href="index.html" class="big-header__logo">
     <img src="img/logo.svg" alt="Logo" />
-  </div>
+  </a>
   <nav class="nav">
     <div class="nav__item nav__item_relative _popup-block-container">
       <button class="nav__link _open-popup-block">Wallet</button>
