--- a/src/html/index/first-slide.html
+++ b/src/html/index/first-slide.html
@@ -21,9 +21,10 @@
             <button class="action-button">Get wallet</button>
           </div>
           <div class="form__accept">
-            <label for="accept-1" class="form__label">
-              <input id="accept-1" type="checkbox" class="form__checkbox" />
+            <label for="accept-1" class="form__label checkbox">
               I accept Terms&Conditions and Privacy Policy
+              <input id="accept-1" type="checkbox">
+              <span class="checkbox__checkmark"></span>
             </label>
           </div>
         </form>
