--- a/src/html/contact/contact-form.html
+++ b/src/html/contact/contact-form.html
@@ -10,7 +10,7 @@
       <div class="form__item">
         <input type="mail" placeholder="Email" class="form__input">
       </div>
-      <div class="form__item">
+      <div class="form__item select-container">
         <select class="form__select form__select_max-width-none select" placeholder="Select a topic">
           <option>
             Topic 1
@@ -27,9 +27,10 @@
         <textarea class="form__textarea" placeholder="Write your message here"></textarea>
       </div>
       <div class="form__accept">
-        <label for="accept-1" class="form__label">
-          <input id="accept-1" type="checkbox" class="form__checkbox" />
+        <label for="accept-1" class="form__label checkbox">
           I accept Terms&Conditions and Privacy Policy
+          <input id="accept-1" type="checkbox">
+          <span class="checkbox__checkmark"></span>
         </label>
       </div>
     </div>
