pixel perfect styles

--- a/src/html/documents/aside-nav.html
+++ b/src/html/documents/aside-nav.html
@@ -1,5 +1,5 @@
 <div class="aside-nav-container">
-  <div class="aside-nav-container__user">
+  <div class="aside-nav-container__user aside-nav-container__user_small-padding-bottom">
     <a href="#" class="aside-nav-container__link">oper@mail.com</a>
     <a href="#" class="aside-nav-container__link">admin@mail.com</a>
   </div>
