--- a/src/html/documents/block.html
+++ b/src/html/documents/block.html
@@ -8,7 +8,7 @@
         <div class="user-docs__user">
           user@mail.com
         </div>
-        <div class="user-docs__col">
+        <div class="user-docs__col user-docs__col_documents">
           <div class="user-docs__row">
             Passport
           </div>
@@ -49,7 +49,7 @@
         <div class="user-docs__user">
           user@mail.com
         </div>
-        <div class="user-docs__col">
+        <div class="user-docs__col user-docs__col_documents">
           <div class="user-docs__row">
             Passport
           </div>
@@ -90,7 +90,7 @@
         <div class="user-docs__user">
           user@mail.com
         </div>
-        <div class="user-docs__col">
+        <div class="user-docs__col user-docs__col_documents">
           <div class="user-docs__row">
             Passport
           </div>
@@ -131,7 +131,7 @@
         <div class="user-docs__user">
           user@mail.com
         </div>
-        <div class="user-docs__col">
+        <div class="user-docs__col user-docs__col_documents">
           <div class="user-docs__row">
             Passport
           </div>
@@ -172,7 +172,7 @@
         <div class="user-docs__user">
           user@mail.com
         </div>
-        <div class="user-docs__col">
+        <div class="user-docs__col user-docs__col_documents">
           <div class="user-docs__row">
             Passport
           </div>
@@ -213,7 +213,7 @@
         <div class="user-docs__user">
           user@mail.com
         </div>
-        <div class="user-docs__col">
+        <div class="user-docs__col user-docs__col_documents">
           <div class="user-docs__row">
             Passport
           </div>
