--- a/src/html/exchange/get-wallet.html
+++ b/src/html/exchange/get-wallet.html
@@ -1,10 +1,10 @@
 <div class="first-slide__link _popup-block-container">
   <button type="button" class="first-slide__button first-slide__button_relative first-slide__button_alt _open-popup-block">
-    Get wallet
+    Get Wallet
   </button>
   <div class="popup-block get-wallet _popup-block">
     <div class="popup-block__title">
-      Get wallet
+      Get Wallet
     </div>
     <form action="" class="form">
       <div class="form__item">
