--- a/src/html/index/big-header.html
+++ b/src/html/index/big-header.html
@@ -18,18 +18,18 @@
           </div>
           <div class="wallet-form__actions">
             <div class="form__accept">
-              <label for="remember" class="form__label form__label_font-size-14 checkbox">
+              <label for="remember" class="form__label form__label_font-size-14 checkbox checkbox_small">
                 Remember me
                 <input id="remember" type="checkbox">
-                <span class="checkbox__checkmark"></span>
+                <span class="checkbox__checkmark checkbox__checkmark_small"></span>
               </label>
             </div>
             <a href="#" class="wallet-form__forgot-link">Forgot password</a>
           </div>
           <div class="popup-block__button">
-            <button type="submit" class="action-button">
+            <a href="dashboard.html" class="action-button">
               Login
-            </button>
+            </a>
           </div>
         </form>
       </div>
