--- a/src/html/withdraw/withdraw-block.html
+++ b/src/html/withdraw/withdraw-block.html
@@ -18,9 +18,9 @@
             </option>
           </select>
         </div>
-        <input type="text" value="0.16615" class="withdraw__input">
+        <input type="text" value="0.16615" class="withdraw-block__input">
       </div>
-      <div class="form__item form__item_flex form__item_with-content">
+      <div class="form__item form__item_flex form__item_with-content form__item_alt">
         <span class="form__content">To</span>
         <input type="text" value="100" disabled class="form__input form__input_alt" placeholder="" />
       </div>
