--- a/src/transactions.html
+++ b/src/transactions.html
@@ -20,7 +20,7 @@
 		@import "header.html"
 		<main class="dashboard-wrapper">
 			@import "transactions/aside-nav.html"
-			<section class="dashboard">
+			<section class="dashboard transactions">
 				@import "logout.html"
 				@import "transactions/block.html"
 			</section>
