--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:700" rel="stylesheet">
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
 </head>
 
 <body>
@@ -34,5 +36,12 @@
 		</main>
 	</div>
 	<script src="js/main.min.js"></script>
+
+	<script>
+		pixelperfect.init({
+			image: "img/web.png",
+			opacity: 0.3
+		});
+	</script>
 </body>
 </html>
