--- a/src/html/dashboard/block-balance.html
+++ b/src/html/dashboard/block-balance.html
@@ -2,7 +2,7 @@
   <header class="block__header">
     <h2 class="block__title">Balance wallet</h2>
   </header>
-  <div class="block__body">
+  <div class="block__body block__body_wallet-balance">
     <div class="wallet-balance">
       <div class="wallet-balance__title">BTC wallet</div>
       <div class="wallet-balance__amount">
