--- a/src/html/dashboard/block-btc.html
+++ b/src/html/dashboard/block-btc.html
@@ -1,9 +1,19 @@
 <div class="block">
   <header class="block__header">
-    <h2 class="block__title">
-      BTC
-    </h2>
-    <div class="block__actions">
+    <div class="select-container select-container_gray-arrow">
+      <select class="select" name="state">
+        <option value="btc">
+          Bitcoin
+        </option>
+        <option value="eth">
+          ETH
+        </option>
+        <option value="3">
+          Bitcoin
+        </option>
+      </select>
+    </div>
+    <div class="block__actions block__actions_margin-top">
       <button class="block__action-btn block__action-btn_active">Week</button>
       <button class="block__action-btn">Month</button>
       <button class="block__action-btn">Year</button>
