--- a/src/html/dashboard/block-exchange.html
+++ b/src/html/dashboard/block-exchange.html
@@ -1,5 +1,5 @@
 <div class="block block_big">
-  <header class="block__header">
+  <header class="block__header block__header_exchange">
     <div class="block__title block__title_flex">
       <h2>Exchange</h2>
       <select>BTC</select>
@@ -67,21 +67,22 @@
     </div>
     <div class="block__exchange-form">
       <form action="" class="form">
-        <div class="form__item form__item_margin-bottom-34 form__item_with-content">
+        <div class="form__item form__item_margin-bottom-36 form__item_with-content">
           <span class="form__content form__content_font-size-19">Amount in €</span>
           <input type="number" class="form__input form__input_font-size-19 form__input_alt" placeholder="" />
         </div>
-        <div class="form__item form__item_margin-bottom-34 form__item_with-content">
+        <div class="form__item form__item_margin-bottom-36 form__item_with-content">
           <span class="form__content form__content_font-size-19">You`ll get:</span>
           <input type="number" disabled class="form__input form__input_font-size-19 form__input_alt" placeholder="" />
         </div>
-        <button class="button button_margin-bottom-26 button_margin-left-81 button_font-size-34">
+        <button class="button button_margin-bottom-23 button_margin-left-81 button_font-size-34">
           Exchange
         </button>
         <div class="form__accept form__accept_flex-end">
-          <label for="accept" class="form__label">
-            <input id="accept" type="checkbox" class="form__checkbox" />
+          <label for="accept-1" class="form__label checkbox checkbox_medium">
             I accept Terms&Conditions and Privacy Policy
+            <input id="accept-1" type="checkbox">
+            <span class="checkbox__checkmark checkbox__checkmark_medium"></span>
           </label>
         </div>
       </form>
