--- a/src/html/legal/header.html
+++ b/src/html/legal/header.html
@@ -25,9 +25,9 @@
             <a href="#" class="wallet-form__forgot-link">Forgot password</a>
           </div>
           <div class="popup-block__button">
-            <button type="submit" class="action-button">
+            <a href="dashboard.html" class="action-button">
               Login
-            </button>
+            </a>
           </div>
         </form>
       </div>
