--- a/src/html/dashboard/block-btc.html
+++ b/src/html/dashboard/block-btc.html
@@ -3,13 +3,13 @@
     <div class="select-container select-container_gray-arrow">
       <select class="select" name="state">
         <option value="btc">
-          Bitcoin
+          BTC
         </option>
         <option value="eth">
           ETH
         </option>
         <option value="3">
-          Bitcoin
+          BTC
         </option>
       </select>
     </div>
