--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 <body>
 	<div class="wrapper background-layout">
 		@import "index/big-header.html"
-		<div class="content">
+		<div class="content index">
 			<main class="first-slide">
 				<div class="first-slide__content">
 					@import "index/first-slide.html"
