--- a/src/html/header.html
+++ b/src/html/header.html
@@ -2,7 +2,8 @@
   <a href="index.html" class="header__logo">
     <img src="img/logo.svg" alt="Logo" />
   </a>
-  <nav class="nav nav_padding-top">
+  <button class="burger _open-menu"></button>
+  <nav class="nav nav_desktop nav_padding-top">
     <div class="nav__item">
       <button class="nav__link nav__link_active">Wallet</button>
     </div>
