--- a/src/contact.html
+++ b/src/contact.html
@@ -16,6 +16,7 @@
 <body>
 	<div class="wrapper background-layout background-layout_with-back">
 		@import "contact/header.html"
+		@import "contact/menu.html"
 		<main class="content">
 			<div class="background-layout__content">
 				<div class="contact-container">
