--- a/src/documents.html
+++ b/src/documents.html
@@ -18,6 +18,7 @@
 <body>
 	<div class="background-layout">
 		@import "header.html"
+		@import "documents/menu.html"
 		<main class="dashboard-wrapper">
 			@import "documents/aside-nav.html"
 			<section class="dashboard">
