--- a/src/exchange.html
+++ b/src/exchange.html
@@ -18,9 +18,10 @@
 </head>
 
 <body>
-	<div class="wrapper background-layout">
+	<div class="wrapper background-layout background-layout_with-back exchange">
 		<div class="content">
 			@import "exchange/big-header.html"
+			@import "exchange/menu.html"
 			<main class="first-slide">
 				<div class="first-slide__content exchange">
 				  @import "exchange/form.html"
