--- a/src/html/contact/contacts.html
+++ b/src/html/contact/contacts.html
@@ -6,7 +6,7 @@
   <div class="contacts__block">
     <div class="contacts__col">
       <div class="contacts__icon">
-
+        <img src="img/phone.svg" alt="Phone icon" />
       </div>
       <div class="contacts__subtitle">
         Contact us
@@ -18,7 +18,7 @@
     </div>
     <div class="contacts__col">
       <div class="contacts__icon">
-
+        <img src="img/clock.svg" alt="Phone icon" />
       </div>
       <div class="contacts__subtitle">
         We work
