--- a/src/html/documents/block.html
+++ b/src/html/documents/block.html
@@ -4,247 +4,163 @@
       Users and documents
     </h2>
     <div class="user-docs">
-      <div class="user-docs__info">
-        <div class="user-docs__user">
-          user@mail.com
-        </div>
-        <div class="user-docs__col user-docs__col_documents">
-          <div class="user-docs__row">
-            Passport
-          </div>
-          <div class="user-docs__row">
-            Blank documents
-          </div>
-        </div>
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            September 25 2018
-          </div>
-          <div class="user-docs__row">
-            September 25 2018
-          </div>
-        </div>
+      <div class="user-docs__user">
+        user@mail.com
       </div>
-      <div class="user-docs__info">
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            <button class="user-docs__button">Show</button>
+      <div class="user-docs__section">
+        <div class="user-docs__row">
+          <div class="user-docs__info">
+            <div class="user-docs__doc-name">Passport</div>
+            <div class="user-docs__date">September 25 2018</div>
           </div>
-          <div class="user-docs__row">
+          <div class="user-docs__info">
             <button class="user-docs__button">Show</button>
+            <div class="user-docs__status user-docs__status_confirm">Confirm</div>
           </div>
         </div>
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            <span class="user-docs__status user-docs__status_confirm">Confirm</span>
+        <div class="user-docs__row">
+          <div class="user-docs__info">
+            <div class="user-docs__doc-name">Blank documents</div>
+            <div class="user-docs__date">September 25 2018</div>
           </div>
-          <div class="user-docs__row">
-            <span class="user-docs__status user-docs__status_confirmed">Confirmed</span>
+          <div class="user-docs__info">
+            <button class="user-docs__button">Show</button>
+            <div class="user-docs__status user-docs__status_confirmed">Confirmed</div>
           </div>
         </div>
       </div>
     </div>
     <div class="user-docs">
-      <div class="user-docs__info">
-        <div class="user-docs__user">
-          user@mail.com
-        </div>
-        <div class="user-docs__col user-docs__col_documents">
-          <div class="user-docs__row">
-            Passport
-          </div>
-          <div class="user-docs__row">
-            Blank documents
-          </div>
-        </div>
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            September 25 2018
-          </div>
-          <div class="user-docs__row">
-            September 25 2018
-          </div>
-        </div>
+      <div class="user-docs__user">
+        user@mail.com
       </div>
-      <div class="user-docs__info">
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            <button class="user-docs__button">Show</button>
+      <div class="user-docs__section">
+        <div class="user-docs__row">
+          <div class="user-docs__info">
+            <div class="user-docs__doc-name">Passport</div>
+            <div class="user-docs__date">September 25 2018</div>
           </div>
-          <div class="user-docs__row">
+          <div class="user-docs__info">
             <button class="user-docs__button">Show</button>
+            <div class="user-docs__status user-docs__status_confirm">Confirm</div>
           </div>
         </div>
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            <span class="user-docs__status user-docs__status_confirm">Confirm</span>
+        <div class="user-docs__row">
+          <div class="user-docs__info">
+            <div class="user-docs__doc-name">Blank documents</div>
+            <div class="user-docs__date">September 25 2018</div>
           </div>
-          <div class="user-docs__row">
-            <span class="user-docs__status user-docs__status_confirmed">Confirmed</span>
+          <div class="user-docs__info">
+            <button class="user-docs__button">Show</button>
+            <div class="user-docs__status user-docs__status_confirmed">Confirmed</div>
           </div>
         </div>
       </div>
     </div>
     <div class="user-docs">
-      <div class="user-docs__info">
-        <div class="user-docs__user">
-          user@mail.com
-        </div>
-        <div class="user-docs__col user-docs__col_documents">
-          <div class="user-docs__row">
-            Passport
-          </div>
-          <div class="user-docs__row">
-            Blank documents
-          </div>
-        </div>
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            September 25 2018
-          </div>
-          <div class="user-docs__row">
-            September 25 2018
-          </div>
-        </div>
+      <div class="user-docs__user">
+        user@mail.com
       </div>
-      <div class="user-docs__info">
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            <button class="user-docs__button">Show</button>
+      <div class="user-docs__section">
+        <div class="user-docs__row">
+          <div class="user-docs__info">
+            <div class="user-docs__doc-name">Passport</div>
+            <div class="user-docs__date">September 25 2018</div>
           </div>
-          <div class="user-docs__row">
+          <div class="user-docs__info">
             <button class="user-docs__button">Show</button>
+            <div class="user-docs__status user-docs__status_confirm">Confirm</div>
           </div>
         </div>
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            <span class="user-docs__status user-docs__status_confirm">Confirm</span>
+        <div class="user-docs__row">
+          <div class="user-docs__info">
+            <div class="user-docs__doc-name">Blank documents</div>
+            <div class="user-docs__date">September 25 2018</div>
           </div>
-          <div class="user-docs__row">
-            <span class="user-docs__status user-docs__status_confirmed">Confirmed</span>
+          <div class="user-docs__info">
+            <button class="user-docs__button">Show</button>
+            <div class="user-docs__status user-docs__status_confirmed">Confirmed</div>
           </div>
         </div>
       </div>
     </div>
     <div class="user-docs">
-      <div class="user-docs__info">
-        <div class="user-docs__user">
-          user@mail.com
-        </div>
-        <div class="user-docs__col user-docs__col_documents">
-          <div class="user-docs__row">
-            Passport
-          </div>
-          <div class="user-docs__row">
-            Blank documents
-          </div>
-        </div>
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            September 25 2018
-          </div>
-          <div class="user-docs__row">
-            September 25 2018
-          </div>
-        </div>
+      <div class="user-docs__user">
+        user@mail.com
       </div>
-      <div class="user-docs__info">
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            <button class="user-docs__button">Show</button>
+      <div class="user-docs__section">
+        <div class="user-docs__row">
+          <div class="user-docs__info">
+            <div class="user-docs__doc-name">Passport</div>
+            <div class="user-docs__date">September 25 2018</div>
           </div>
-          <div class="user-docs__row">
+          <div class="user-docs__info">
             <button class="user-docs__button">Show</button>
+            <div class="user-docs__status user-docs__status_confirm">Confirm</div>
           </div>
         </div>
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            <span class="user-docs__status user-docs__status_confirm">Confirm</span>
+        <div class="user-docs__row">
+          <div class="user-docs__info">
+            <div class="user-docs__doc-name">Blank documents</div>
+            <div class="user-docs__date">September 25 2018</div>
           </div>
-          <div class="user-docs__row">
-            <span class="user-docs__status user-docs__status_confirmed">Confirmed</span>
+          <div class="user-docs__info">
+            <button class="user-docs__button">Show</button>
+            <div class="user-docs__status user-docs__status_confirmed">Confirmed</div>
           </div>
         </div>
       </div>
     </div>
     <div class="user-docs">
-      <div class="user-docs__info">
-        <div class="user-docs__user">
-          user@mail.com
-        </div>
-        <div class="user-docs__col user-docs__col_documents">
-          <div class="user-docs__row">
-            Passport
-          </div>
-          <div class="user-docs__row">
-            Blank documents
-          </div>
-        </div>
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            September 25 2018
-          </div>
-          <div class="user-docs__row">
-            September 25 2018
-          </div>
-        </div>
+      <div class="user-docs__user">
+        user@mail.com
       </div>
-      <div class="user-docs__info">
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            <button class="user-docs__button">Show</button>
+      <div class="user-docs__section">
+        <div class="user-docs__row">
+          <div class="user-docs__info">
+            <div class="user-docs__doc-name">Passport</div>
+            <div class="user-docs__date">September 25 2018</div>
           </div>
-          <div class="user-docs__row">
+          <div class="user-docs__info">
             <button class="user-docs__button">Show</button>
+            <div class="user-docs__status user-docs__status_confirm">Confirm</div>
           </div>
         </div>
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            <span class="user-docs__status user-docs__status_confirm">Confirm</span>
+        <div class="user-docs__row">
+          <div class="user-docs__info">
+            <div class="user-docs__doc-name">Blank documents</div>
+            <div class="user-docs__date">September 25 2018</div>
           </div>
-          <div class="user-docs__row">
-            <span class="user-docs__status user-docs__status_confirmed">Confirmed</span>
+          <div class="user-docs__info">
+            <button class="user-docs__button">Show</button>
+            <div class="user-docs__status user-docs__status_confirmed">Confirmed</div>
           </div>
         </div>
       </div>
     </div>
     <div class="user-docs">
-      <div class="user-docs__info">
-        <div class="user-docs__user">
-          user@mail.com
-        </div>
-        <div class="user-docs__col user-docs__col_documents">
-          <div class="user-docs__row">
-            Passport
-          </div>
-          <div class="user-docs__row">
-            Blank documents
-          </div>
-        </div>
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            September 25 2018
-          </div>
-          <div class="user-docs__row">
-            September 25 2018
-          </div>
-        </div>
+      <div class="user-docs__user">
+        user@mail.com
       </div>
-      <div class="user-docs__info">
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            <button class="user-docs__button">Show</button>
+      <div class="user-docs__section">
+        <div class="user-docs__row">
+          <div class="user-docs__info">
+            <div class="user-docs__doc-name">Passport</div>
+            <div class="user-docs__date">September 25 2018</div>
           </div>
-          <div class="user-docs__row">
+          <div class="user-docs__info">
             <button class="user-docs__button">Show</button>
+            <div class="user-docs__status user-docs__status_confirm">Confirm</div>
           </div>
         </div>
-        <div class="user-docs__col">
-          <div class="user-docs__row">
-            <span class="user-docs__status user-docs__status_confirm">Confirm</span>
+        <div class="user-docs__row">
+          <div class="user-docs__info">
+            <div class="user-docs__doc-name">Blank documents</div>
+            <div class="user-docs__date">September 25 2018</div>
           </div>
-          <div class="user-docs__row">
-            <span class="user-docs__status user-docs__status_confirmed">Confirmed</span>
+          <div class="user-docs__info">
+            <button class="user-docs__button">Show</button>
+            <div class="user-docs__status user-docs__status_confirmed">Confirmed</div>
           </div>
         </div>
       </div>
