--- a/src/transactions.html
+++ b/src/transactions.html
@@ -18,6 +18,7 @@
 <body>
 	<div class="background-layout">
 		@import "header.html"
+		@import "transactions/menu.html"
 		<main class="dashboard-wrapper">
 			@import "transactions/aside-nav.html"
 			<section class="dashboard transactions">
