--- a/src/withdraw.html
+++ b/src/withdraw.html
@@ -20,6 +20,7 @@
 <body>
 	<div class="background-layout">
 		@import "header.html"
+		@import "withdraw/menu.html"
 		<main class="dashboard-wrapper">
 			@import "withdraw/aside-nav.html"
 			<section class="dashboard">
