--- a/src/faq.html
+++ b/src/faq.html
@@ -14,6 +14,7 @@
 <body>
 	<div class="wrapper background-layout background-layout_with-back">
 		@import "faq/header.html"
+		@import "faq/menu.html"
 		<main class="content">
 			<div class="background-layout__content">
 				@import "faq/tabs.html"
