--- a/src/html/legal/header.html
+++ b/src/html/legal/header.html
@@ -2,7 +2,8 @@
   <a href="index.html" class="big-header__logo">
     <img src="img/logo.svg" alt="Logo" />
   </a>
-  <nav class="nav">
+  <button class="burger _open-menu"></button>
+  <nav class="nav nav_desktop">
     <div class="nav__item nav__item_relative _popup-block-container">
       <button class="nav__link _open-popup-block">Wallet</button>
       <div class="popup-block wallet-form _popup-block">
