--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
 <body>
 	<div class="wrapper background-layout">
 		@import "index/big-header.html"
+		@import "index/menu.html"
 		<div class="content index">
 			<main class="first-slide">
 				<div class="first-slide__content">
