--- a/src/legal.html
+++ b/src/legal.html
@@ -14,6 +14,7 @@
 <body>
 	<div class="wrapper background-layout background-layout_with-back">
 		@import "legal/header.html"
+		@import "legal/menu.html"
 		<main class="content">
 			<div class="background-layout__content">
 				@import "legal/tabs.html"
