--- a/src/html/dashboard/block-exchange.html
+++ b/src/html/dashboard/block-exchange.html
@@ -103,11 +103,11 @@
       <form action="" class="form">
         <div class="form__item form__item_margin-bottom-36 form__item_with-content">
           <span class="form__content form__content_font-size-19">Amount in €</span>
-          <input type="number" class="form__input form__input_font-size-19 form__input_alt" placeholder="" />
+          <input type="text" class="form__input form__input_font-size-19 form__input_alt" placeholder="" />
         </div>
         <div class="form__item form__item_margin-bottom-36 form__item_with-content">
           <span class="form__content form__content_font-size-19">You`ll get:</span>
-          <input type="number" disabled class="form__input form__input_font-size-19 form__input_alt" placeholder="" />
+          <input type="text" disabled class="form__input form__input_font-size-19 form__input_alt" placeholder="" />
         </div>
         <button class="button button_margin-bottom-23 button_margin-left-81 button_font-size-34">
           Exchange
