--- a/src/html/dashboard/menu.html
+++ b/src/html/dashboard/menu.html
@@ -11,7 +11,7 @@
       <a href="withdraw.html" class="nav__link">Withdraw</a>
     </div>
     <div class="nav__item">
-      <button class="nav__link">Wallet</button>
+      <a href="wallet.html" class="nav__link">Wallet</a>
     </div>
     <div class="nav__item">
       <a href="faq.html" class="nav__link">FAQ</a>
