--- a/src/html/documents/menu.html
+++ b/src/html/documents/menu.html
@@ -2,7 +2,7 @@
   <button class="menu__close _close-menu"></button>
   <nav class="nav nav_direction-column">
     <div class="nav__item">
-      <a href="admin-transactios.html" class="nav__link">Transactions</a>
+      <a href="admin-transactions.html" class="nav__link">Transactions</a>
     </div>
     <div class="nav__item">
       <a href="documents.html" class="nav__link nav__link_active">Documents</a>
