add link to withdraw

--- a/src/html/dashboard/block-balance.html
+++ b/src/html/dashboard/block-balance.html
@@ -8,14 +8,14 @@
       <div class="wallet-balance__amount">
         0.16615 BTC
       </div>
-      <button class="wallet-balance__btn">Withdraw</button>
+      <a href="withdraw.html" class="wallet-balance__btn">Withdraw</a>
     </div>
     <div class="wallet-balance">
       <div class="wallet-balance__title">ETH wallet</div>
       <div class="wallet-balance__amount">
         46.47095 ETH
       </div>
-      <button class="wallet-balance__btn">Withdraw</button>
+      <a href="withdraw.html" class="wallet-balance__btn">Withdraw</a>
     </div>
   </div>
 </div>
